# Rasberry_pi_pico_2_w

./: README.md  SECURITY.md
ascii_clock/: CMakeLists.txt  README.md  ascii_clock.cpp  build.sh
blink/: REDME.md  blink.cpp  blink.uf2
pico-shell-based-os/: CMakeLists.txt  README.md  build.sh  pico_os.cpp
pico_os/: CMakeLists.txt  README.md  build.sh  main.cpp
pico_scanner/: CMakeLists.txt  README.md  build.sh  lwipopts.h  scanner.cpp
pico_webserver/: CMakeLists.txt  README.md  build.sh  check.sh  pico_webserver.cpp  pico_webserver.uf2
shell-based-pico-os/: CMakeLists.txt  README.md  build.sh  lwipopts.h  pico_os.cpp
to-do-pico/: README.md  main.cpp  pico_task_manager.uf2
